# dorch

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile.base  README.md  Untitled-1  docker-bake.hcl  dump_wad_json.py  index.html  o.json  o2.json  out.json  prompt.txt  requirements.txt  service.yaml  up.sh  wad.json
.buildx-cache/ingest/04f7e00e0613e975df3614efc34a736bd70cd3a5c2a7c63fb92fcbba521c7d8f/: ref  startedat  total  updatedat
analyzer/: Cargo.toml  Dockerfile
analyzer/src/: args.rs  main.rs
analyzer/src/worker/: analyzer.rs  app.rs  mod.rs
analyzer/src/worker/map/: mod.rs
analyzer/src/worker/map/prompts/: analyze_map.txt
analyzer/src/worker/wad/: mod.rs
analyzer/src/worker/wad/prompts/: analyze_wad.txt
archiver/: .dockerignore  .gitignore  Dockerfile  Dockerfile.init  _vizdoom.ini  del-zips.py  download-iwads.sh  download_wad.py  download_wads_local.py  download_wads_local.sh  download_wads_to_s3.py  dump_wad_json.py  extract-map-titles.py  extract-zips.py  idgames.py  index.html  meta-dispatch.py  meta-worker.py  meta.py  meta.sh  meta_eda.py  natsutil.py  panorama.sh  run-screenshot-worker.sh  screenshot-renderer.py  screenshot-worker.py  screenshot_job.py  screenshots.py  summarize.txt  test_meta_textures.py  verify.py
auth/: Cargo.toml  Dockerfile
auth/src/: admin.rs  args.rs  client.rs  keys.rs  lib.rs  main.rs  protocol.rs  server.rs  srp.rs  user_record_store.rs  zandronum.rs  zandronum_srp_sha256.rs
browser/: .env.example  Dockerfile  README.md  manifesto.md  package-lock.json  package.json  prompt-proper.txt  prompt.txt
browser/src/: hooks.server.ts
browser/src/lib/assets/: manifesto.html
browser/src/lib/components/: DorchLogo.svelte  DorchPlayButton.svelte  Jumbotron.svelte  JumbotronCarousel.svelte  LoginModal.svelte  PanoViewer.svelte  PartyFab.svelte  ServerCreateModal.svelte  SettingsModal.svelte
browser/src/lib/server/: dorchmaster.ts  forwarded.ts  iam.ts  rate_limit.ts  redis.ts  wadinfo.ts
browser/src/lib/stores/: toast.ts
browser/src/lib/types/: auth.ts  games.ts  wadinfo.ts
browser/src/lib/utils/: format.ts
browser/src/routes/: +error.svelte  +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte  layout.css
browser/src/routes/account/: +page.svelte
browser/src/routes/manifesto/: +page.svelte
browser/src/routes/party/: +page.svelte
browser/src/routes/servers/: +page.server.ts  (+1 more)
chart/: Chart.yaml  values.yaml
chart/templates/: _keycloak-env.yaml  _livekit-env.yaml  _metrics-env.yaml  _nats-env.yaml  _postgres-env.yaml  _ratelimiter-env.yaml  archiver.yaml  auth.yaml  browser.yaml  client.yaml  iam.yaml  jumbotron.yaml  master.yaml  operator.yaml  party-router.yaml  party.yaml  screenshot.yaml  sock.yaml  wadinfo-dispatch-analysis.yaml  wadinfo-dispatch-images.yaml  wadinfo.yaml  webrtc-auth.yaml
chart/templates/analysis/: analyze-map.yaml  analyze-wad.yaml
common-backup/: Cargo.toml
common-backup/src/: lib.rs
common/src/: args.rs  lib.rs  redis.rs  streams.rs  types.rs
common/src/rate_limit/: middleware.rs  mod.rs
crds/: dorch.beebs.dev_game_crd.yaml
downloader/: Dockerfile  download.sh  test-download.sh
iam/: Cargo.toml  Dockerfile
iam-client/: Cargo.toml
iam/src/: app.rs  args.rs  main.rs
iam/src/server/: internal.rs  public.rs
indexer/: insert.py
master/: Cargo.toml  Dockerfile
master/src/: app.rs  args.rs  client.rs  main.rs  set_game_info_field.lua  set_game_info_fields.lua  store.rs
master/src/server/: internal.rs  public.rs
operator/: Cargo.toml  Dockerfile  build.rs
operator/src/: main.rs
operator/src/games/: actions.rs  reconcile.rs
operator/src/util/: mod.rs  patch.rs
party/: Cargo.toml  Dockerfile
party/src/: app.rs  args.rs  client.rs  get_party.lua  main.rs  party_store.rs  remove_member.lua  router.rs
party/src/server/: internal.rs  public.rs
proxy/: Cargo.toml  Dockerfile
proxy/src/: args.rs  main.rs  server.rs
screenshot/: Dockerfile  _vizdoom.ini  download_wad.py  idgames.py  index.html  main.py  panorama.sh  prompt.txt  requirements.txt  run.sh
scripts/: abort.sh  archiver-smoke-test.yaml  archiver.yaml  dorch_values.yaml  get-secret-value.sh  meta.yaml  migrate-keycloak.sh  migrate.sh  nats_streams.yaml  psql.sh  pvc.yaml  redis.sh  sunder.yaml  sunlust.yaml  test-game.yaml  test-game2.yaml  upgrade_dorch.sh
scripts/games/: ez.yaml  med.yaml  stardate.yaml  sunder.yaml  test-game.yaml
server/: Cargo.toml  Dockerfile  download.sh  server.sh
server/src/: main.rs
sock/: Cargo.toml  Dockerfile
sock/src/: args.rs  auth.rs  common.rs  jwt.rs  keycloak.rs  main.rs  payload.rs  server.rs  ws.rs
types/: Cargo.toml
types/src/: lib.rs
wadinfo/: Cargo.toml  Dockerfile
wadinfo/src/: app.rs  args.rs  client.rs  db.rs  main.rs
wadinfo/src/dispatch/: mod.rs  s3.rs
wadinfo/src/dispatch/analysis/: db.rs  mod.rs  tables.sql
wadinfo/src/dispatch/images/: db.rs  mod.rs  tables.sql
wadinfo/src/server/: internal.rs  public.rs
wadinfo/src/sql/: delete_map_analysis_tags.sql  delete_wad_analysis_tags.sql  delete_wad_children.sql  delete_wad_map_images.sql  delete_wad_source_idgames.sql  featured_wads.sql  featured_wads_with_images.sql  get_wad.sql  get_wad_analysis.sql  get_wad_map.sql  get_wad_map_analysis.sql  get_wad_map_analysis_exists.sql  get_wad_maps.sql  get_wad_metas.sql  get_wad_public.sql  insert_map_analysis.sql  insert_map_analysis_tag.sql  insert_wad.sql  insert_wad_analysis.sql  insert_wad_analysis_tag.sql  insert_wad_author.sql  insert_wad_description.sql  insert_wad_filename.sql  insert_wad_map.sql  insert_wad_map_image.sql  insert_wad_map_item.sql  insert_wad_map_list.sql  insert_wad_map_monster.sql  insert_wad_map_texture.sql  insert_wad_text_file.sql  list_map_analyses.sql  list_map_analysis_tags.sql  list_wad_analysis_tags.sql  list_wad_images.sql  list_wad_map_images.sql  list_wad_map_names.sql  list_wad_maps.sql  list_wad_text_files.sql  list_wads.sql  list_wads_asc.sql  (+11 more)
webrtc-auth/: Cargo.toml  Dockerfile  build.sh
webrtc-auth/src/: app.rs  args.rs  main.rs  server.rs  token.rs
(+18 files in other folders)
