[package]
name = "dorch-analyzer"
version = "0.1.0"
edition = "2024"

[dependencies]
dorch-common = { path = "../common" }
dorch-wadinfo = { path = "../wadinfo" }
tokio-postgres = { workspace = true }
postgres = { workspace = true }
deadpool-postgres = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }
tokio-util = { workspace = true }
percent-encoding = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
clap = { workspace = true }
redis.workspace = true
deadpool-redis = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio-stream = { workspace = true }
axum = { workspace = true }
keycloak = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
postgres-types = { workspace = true }
base64-url = { workspace = true }
axum-keycloak-auth = { workspace = true }
async-nats = { workspace = true }
owo-colors = { workspace = true }
humantime = { workspace = true }
rand = { workspace = true }
redis-lock = "0.5.1"
async-redis-lock = "0.2.3"
openai = "1.1.1"
