[package]
name = "dorch-auth"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "dorch-auth"
path = "src/main.rs"

[dependencies]
dorch-common = { path = "../common" }
dorch-types = { path = "../types" }
tokio = { workspace = true }
bytes = { workspace = true }
tokio-util = { workspace = true }
futures-util = { workspace = true }
clap = { workspace = true }
redis = { workspace = true }
deadpool-redis = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio-stream = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
uuid = { workspace = true }
owo-colors = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
humantime = { workspace = true }
rustls = { workspace = true }
tokio-rustls = { workspace = true }
async-nats = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
keycloak = { workspace = true }
axum-keycloak-auth = { workspace = true }
kube = { version = "2.0.1", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.26.0", default-features = true, features = [
    "latest",
    "schemars",
] }
schemars = { version = "1" }
srp6 = "1.0.0-beta.1"
num-bigint = "0.4"
num-traits = "0.2"
