[package]
name = "dorch-operator"
version = "0.1.0"
edition = "2024"

[dependencies]
dorch-common = { path = "../common" }
dorch-types = { path = "../types" }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
owo-colors = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
hyper = { workspace = true }
lazy_static = { workspace = true }
const_format  = { workspace = true }
uuid = { workspace = true }
parse_duration = { workspace = true }
kube = { version = "2.0.1", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.26.0", default-features = true, features = [
    "latest",
    "schemars",
] }
schemars = { version = "1" }
json-patch = "4.1.0"
prometheus = { version = "0.13", optional = true }

[build-dependencies]
serde_yaml = "0.9"
dorch-types = { path = "../types" }
kube = { version = "2.0.1", default-features = true, features = ["derive"] }

[features]
default = ["metrics"]        # Enable metrics by default
metrics = ["dep:prometheus"] # metrics feature requires prometheus crate
