[package]
name = "dorch-proxy"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "dorch-proxy"
path = "src/main.rs"

[dependencies]
dorch-common = { path = "../common" }
dorch-types = { path = "../types" }
tokio = { workspace = true }
prometheus = { version = "0.13", optional = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
tokio-util = { workspace = true }
nix = { workspace = true }
bytes = { workspace = true }
livekit = "0.7"
livekit-api = "0.4"
hex = "0.4.3"

[features]
default = ["metrics"]        # Enable metrics by default
metrics = ["dep:prometheus"] # metrics feature requires prometheus crate
