[package]
name = "dorch-server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "dorch-server"
path = "src/main.rs"

[dependencies]
dorch-common = { path = "../common" }
dorch-types = { path = "../types" }
tokio = { workspace = true }
prometheus = { version = "0.13", optional = true }

[features]
default = ["metrics"]        # Enable metrics by default
metrics = ["dep:prometheus"] # metrics feature requires prometheus crate
